# repo_template

./: CHANGELOG.md  Cargo.toml  README.md  justfile
crates/example_crate/: Cargo.toml
src/: main.rs
